test/classes/constructors/dflt-ctor-generic-uninit-field-const-err-1.chpl
class A {
  const c;
}

var x = new A();
